<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="4dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">
        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="90dp"
            android:layout_height="91dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_app_icon" />
        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/recipeNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/na_placeholder" />
            <TextView
                android:id="@+id/missingIngredientTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/recipe_item_missing_ingredients_label" />
            <TextView
                android:id="@+id/missingIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/missingIngredientTitle"
                app:layout_constraintTop_toBottomOf="@id/recipeNameTextView"
                tools:text="@string/na_placeholder" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end|top"
            android:layout_marginStart="6dp">
            <Button
                android:id="@+id/openBrowserButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/open_in_browser_label"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_gravity="end"
                android:drawableStart="@drawable/ic_open_in_browser" />

            <Button
                android:id="@+id/saveRecipeButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/save_button"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_gravity="end"
                android:drawableStart="@drawable/ic_add_white_24dp" />
            <Button
                android:id="@+id/deleteRecipeButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:padding="8dp"
                android:layout_weight="1"
                android:text="@string/delete_button"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:layout_gravity="end"
                android:drawableStart="@drawable/ic_delete_white_24dp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
